// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleError handleKnownError ERROR_KEY = Symbol(ALREADY_VOTED): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40902,
      "errors": Array [],
      "message": "This HKID has already voted this campaign.",
    },
  },
  "status": 409,
}
`;

exports[`handleError handleKnownError ERROR_KEY = Symbol(AUTH_ERROR): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40100,
      "errors": Array [],
      "message": "Authentication Error.",
    },
  },
  "status": 401,
}
`;

exports[`handleError handleKnownError ERROR_KEY = Symbol(CAMPAIGN_INACTIVE): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 42202,
      "errors": Array [],
      "message": "Campaign is not in active date.",
    },
  },
  "status": 422,
}
`;

exports[`handleError handleKnownError ERROR_KEY = Symbol(CAMPAIGN_NOT_FOUND): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40401,
      "errors": Array [],
      "message": "Campaign is not found.",
    },
  },
  "status": 404,
}
`;

exports[`handleError handleKnownError ERROR_KEY = Symbol(CANDIDATE_NAMES_CONFLICT): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40901,
      "errors": Array [],
      "message": "Candidate names are conflict.",
    },
  },
  "status": 409,
}
`;

exports[`handleError handleKnownError ERROR_KEY = Symbol(CANDIDATE_NOT_FOUND): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40402,
      "errors": Array [],
      "message": "Candidate is not found.",
    },
  },
  "status": 404,
}
`;

exports[`handleError handleKnownError ERROR_KEY = Symbol(CONFLICT): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40900,
      "errors": Array [],
      "message": "Conflict.",
    },
  },
  "status": 409,
}
`;

exports[`handleError handleKnownError ERROR_KEY = Symbol(HKID_INVALID): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 42203,
      "errors": Array [],
      "message": "HKID is invalid.",
    },
  },
  "status": 422,
}
`;

exports[`handleError handleKnownError ERROR_KEY = Symbol(NOT_FOUND): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40400,
      "errors": Array [],
      "message": "Resource is not found.",
    },
  },
  "status": 404,
}
`;

exports[`handleError handleKnownError ERROR_KEY = Symbol(SCHEMA_VALIDATION_ERROR): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 42201,
      "errors": Array [],
      "message": "Schema Validation Error",
    },
  },
  "status": 422,
}
`;

exports[`handleError handleKnownError ERROR_KEY = Symbol(UNPROCESSABLE_ENTITY): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 42200,
      "errors": Array [],
      "message": "Unprocessable Entity.",
    },
  },
  "status": 422,
}
`;

exports[`handleError handleKnownError ERROR_KEY = Symbol(VOTE_LOCKED): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 42301,
      "errors": Array [],
      "message": "Another vote with the same HKID for this campaign is in progress. Please try again later.",
    },
  },
  "status": 423,
}
`;

exports[`handleError handleKnownError render error details for Symbol(ALREADY_VOTED): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40902,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "This HKID has already voted this campaign.",
    },
  },
  "status": 409,
}
`;

exports[`handleError handleKnownError render error details for Symbol(AUTH_ERROR): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40100,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "Authentication Error.",
    },
  },
  "status": 401,
}
`;

exports[`handleError handleKnownError render error details for Symbol(CAMPAIGN_INACTIVE): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 42202,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "Campaign is not in active date.",
    },
  },
  "status": 422,
}
`;

exports[`handleError handleKnownError render error details for Symbol(CAMPAIGN_NOT_FOUND): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40401,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "Campaign is not found.",
    },
  },
  "status": 404,
}
`;

exports[`handleError handleKnownError render error details for Symbol(CANDIDATE_NAMES_CONFLICT): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40901,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "Candidate names are conflict.",
    },
  },
  "status": 409,
}
`;

exports[`handleError handleKnownError render error details for Symbol(CANDIDATE_NOT_FOUND): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40402,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "Candidate is not found.",
    },
  },
  "status": 404,
}
`;

exports[`handleError handleKnownError render error details for Symbol(CONFLICT): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40900,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "Conflict.",
    },
  },
  "status": 409,
}
`;

exports[`handleError handleKnownError render error details for Symbol(HKID_INVALID): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 42203,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "HKID is invalid.",
    },
  },
  "status": 422,
}
`;

exports[`handleError handleKnownError render error details for Symbol(NOT_FOUND): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 40400,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "Resource is not found.",
    },
  },
  "status": 404,
}
`;

exports[`handleError handleKnownError render error details for Symbol(SCHEMA_VALIDATION_ERROR): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 42201,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "Schema Validation Error",
    },
  },
  "status": 422,
}
`;

exports[`handleError handleKnownError render error details for Symbol(UNPROCESSABLE_ENTITY): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 42200,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "Unprocessable Entity.",
    },
  },
  "status": 422,
}
`;

exports[`handleError handleKnownError render error details for Symbol(VOTE_LOCKED): > http response of the error 1`] = `
Object {
  "body": Object {
    "data": Object {},
    "meta": Object {
      "code": 42301,
      "errors": Array [
        Object {
          "info": "Additional error message is shown.",
          "path": null,
        },
      ],
      "message": "Another vote with the same HKID for this campaign is in progress. Please try again later.",
    },
  },
  "status": 423,
}
`;

exports[`handleError handleUnknownError for err.details not an array, hide it in http reponse: > http response of the error 1`] = `
Object {
  "data": Object {},
  "meta": Object {
    "code": 50000,
    "errors": Array [],
    "message": "Internal Error.",
  },
}
`;

exports[`handleError meta_code globally unique: list of meta_codes 1`] = `
Array [
  40900,
  50000,
  42201,
  40100,
  40400,
  42200,
  40901,
  40902,
  40401,
  40402,
  42202,
  42203,
  42301,
]
`;

exports[`handleError schema validation error: rendered error response 1`] = `Object {}`;
